Handle left-button clicking on legacy systray icons

As reported in https://bugs.kde.org/show_bug.cgi?id=358589 the left
click is not handled when SNI host is not present and the legacy icon is
used.

This adds handling of the left button.

REVIEW: 127452
BUG: 358589